<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exerciseCreatorItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:orientation="horizontal">

    <Spinner
        android:id="@+id/exerciseSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/repsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/reps"
        android:inputType="number" />

    <EditText
        android:id="@+id/setsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sets"
        android:inputType="number" />

</LinearLayout>