<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.temple.gymminder.SigninFragment"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

    </LinearLayout>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/apptitle"
        android:layout_toEndOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/emailField"
        android:layout_toEndOf="@+id/linearLayout" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_button"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:layout_below="@+id/signinButton"
        android:layout_toEndOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/apptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="64dp"
        android:layout_weight="0.11"
        android:lineSpacingExtra="10sp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="30sp" />

</RelativeLayout>
