<resources>
    <string name="app_name">GymMinder</string>

    <string name="title_workouts">Workouts</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_history">History</string>
    <string name="title_geofence">Geofencing</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="signin_button">Sign In</string>
    <string name="signup_button">Sign Up</string>
    <string name="signout_button">Sign Out</string>
    <string name="sets_progress">%1$d/%2$d</string>
    <string name="start_button_text">start</string>
    <string name="save_workout_text">Save workout results</string>
    <string name="stored_workouts_text">\nSaved Workouts:</string>
    <string name="select_exercise_prompt">Select an Exercise</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="calibrate_title">Calibrate</string>
    <string name="calibrate_msg">You need to calibrate your device before you can begin this exercise.</string>
    <string name="calibrate_instructions">To calibrate your device for this workout, press \"Start Calibration\" and perform a rep of the exercise to the best of your ability, focusing on proper form. Press \"Done Calibration\" when complete.</string>
    <string name="start_calibration">Start Calibration</string>
    <string name="done_calibration">Done Calibration</string>
    <string name="redo_calibration">Redo Calibration</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="repetition">Repetition</string>
    <string name="set">Set</string>
    <string name="finish_set">Finish Set</string>
    <string name="recalibrate">Recalibrate</string>
    <string name="add_geofence">Add a Geofence</string>

    <array name="supported_exercises">
        <item>Bench Press</item>
        <item>Squat</item>
        <item>Curl</item>
    </array>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="workout_name">Workout Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome to GymMinder!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_reps_display">"Reps: %1$d"</string>
    <string name="greeting">Logged in as %1$s!</string>
    <string name="greeting2">Begin, continue, or view a workout below:</string>
    <string name="gps_radius">Size</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="notification_content">Let us help out!</string>
    <string name="notification_title">Looking to work out?</string>
    <string name="geofence">Geofence</string>
</resources>
